# nrn-diff

./: LICENSE.md  README.md  pyproject.toml
nrndiff/: __init__.py  _differences.py  _differs.py  _patches.py  _util.py
tests/: test_diff.py  test_memo.py
