[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nrn-nrn_diff"
authors = [
    {name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.5"
dynamic = ["version", "description"]

[tool.flit.module]
name = "nrndiff"